--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -7,7 +7,7 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Status" icon-off="ion-ios7-pulse" icon-on="ion-ios7-pulse-strong" href="#/tab/dash">
+  <ion-tab title="Home" icon-off="ion-ios7-pulse" icon-on="ion-ios7-pulse-strong" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
