--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7016,18 +7016,23 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: 'Roboto'; }
+
 md-toolbar.md-default-theme {
   background-color: #00bcd4;
   color: rgba(255, 255, 255, 0.87);
-  box-shadow: none; }
-  md-toolbar.md-default-theme h2 {
+  box-shadow: none;
+  font-size: 1.3rem;
+  font-weight: 400;
+  letter-spacing: 0.005em; }
+  md-toolbar.md-default-theme h1, md-toolbar.md-default-theme h2 {
     font-weight: normal;
     color: inherit;
     margin: 0;
-    font-family: inherit;
     line-height: inherit; }
 
-md-content {
+md-content#main {
   position: absolute;
   left: 0;
   right: 0;
