--- a/www/templates/motions/trending.html
+++ b/www/templates/motions/trending.html
@@ -1,10 +1,13 @@
 <ion-view view-title="motions-trending">
   <ion-content class="padding">
-    <md-list-item class="md-3-line" ng-repeat="motion in motions">
-      <div class="md-list-item-text">
-        <h3>{{ motion["Agenda Item Title"] }}</h3>
-        <p>{{ motion["Agenda Item #"] }}</p>
-      </div>
-    </md-list-item>
+    <md-list>
+      <md-list-item class="md-2-line" ng-repeat="motion in motions">
+        <div class="md-avatar" alt="">DE</div>
+        <div class="md-list-item-text">
+          <h3>{{ motion["Agenda Item Title"] }}</h3>
+          <p>{{ motion["Agenda Item #"] }}</p>
+        </div>
+      </md-list-item>
+    </md-list>
   </ion-content>
 </ion-view>
