rip out ionic for now, as unfortunately it is incompatible with android-material https://github.com/angular/material/issues/2365

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -29,8 +29,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: 'Roboto';
 }
 
+md-icon.md-default-theme {
+  color: rgba(255,255,255,0.87);
+}
+
 md-toolbar.md-default-theme {
-  background-color: #00bcd4;
   color: rgba(255,255,255,0.87);
   box-shadow: none;
   font-size: 1.3rem;
@@ -38,6 +41,7 @@ md-toolbar.md-default-theme {
   letter-spacing: 0.005em;
   h1, h2 {
     font-weight: normal;
+    font-size: inherit;
     color: inherit;
     margin: 0;
     line-height: inherit;
