--- a/www/templates/motions.html
+++ b/www/templates/motions.html
@@ -24,7 +24,7 @@
   </md-content>
 </md-sidenav>
 
-<md-tabs md-selected="selectedIndex" class="md-primary" md-no-pagination="true" md-no-ink="false">
+<md-tabs md-selected="selectedIndex" class="md-primary" md-no-pagination="true">
   <md-tab label="Trends" md-on-select="go('motions.trending')">
     <div ui-view="trending"></div>
   </md-tab>
