--- a/www/templates/councillors.html
+++ b/www/templates/councillors.html
@@ -4,7 +4,7 @@
       <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
     </md-button>
     <h2>
-      <span>Motions</span>
+      <span>Councillors</span>
     </h2>
     <span flex></span>
     <!--<md-button class="md-icon-button" aria-label="More">
@@ -14,13 +14,13 @@
 </md-toolbar>
 
 <md-tabs md-selected="selectedIndex" class="md-primary" md-no-pagination="true">
-  <md-tab label="Trends" md-on-select="go('motions.trending')">
-    <div ui-view="trending"></div>
+  <md-tab label="Roster" md-on-select="go('councillors.roster')">
+    <div ui-view="roster"></div>
   </md-tab>
-  <md-tab label="Upcoming" md-on-select="go('motions.upcoming')">
+  <!--<md-tab label="Upcoming" md-on-select="go('motions.upcoming')">
     <div ui-view="upcoming"></div>
   </md-tab>
   <md-tab label="Faves" md-on-select="go('motions.favourites')">
     <div ui-view="favourites"></div>
-  </md-tab>
+  </md-tab>-->
 </md-tabs>
