--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -77,3 +77,9 @@ md-tabs {
   left: 0;
   right: 0;
 }
+
+a.md-button.md-default-theme.md-fab, .md-button.md-default-theme.md-fab {
+  position: absolute;
+  bottom: 2%;
+  right: 2%;
+}
