--- a/www/templates/motions/trending.html
+++ b/www/templates/motions/trending.html
@@ -6,3 +6,6 @@
     </div>
   </md-list-item>
 </md-list>
+<button class="md-fab md-button md-default-theme" ng-transclude="" aria-label="Eat cake">
+  <md-icon md-svg-src="img/icons/add.svg" class="ng-scope ng-isolate-scope md-default-theme" aria-hidden="true"></md-icon>
+</button>
