add councillor attendance tab

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -39,7 +39,7 @@ md-toolbar.md-default-theme {
   font-size: 1.3rem;
   font-weight: 400;
   letter-spacing: 0.005em;
-  padding-top: 25px;
+  //padding-top: 25px;
   h1, h2 {
     font-weight: normal;
     font-size: inherit;
@@ -58,11 +58,17 @@ md-content#main {
 }
 
 md-tabs {
-  top: 88px;
+  top: 63px;
   left: 0;
   right: 0;
   bottom: 0;
   position: absolute;
+}
+
+md-sidenav {
+  .md-button {
+    text-align: left;
+  }
 }
 
 .md-tabs-content {
@@ -79,7 +85,7 @@ md-tabs {
 }
 
 a.md-button.md-default-theme.md-fab, .md-button.md-default-theme.md-fab {
-  position: absolute;
+  position: fixed;
   bottom: 2%;
   right: 2%;
 }
