--- a/www/templates/councillors/roster.html
+++ b/www/templates/councillors/roster.html
@@ -1,6 +1,8 @@
-<md-card>
-  <md-card-content>
-    <h2 class="md-title">Councillors</h2>
-    <p>Content</p>
-  </md-card-content>
-</md-card>
+<md-list>
+  <md-list-item class="md-2-line" ng-repeat="councillor in council">
+    <div class="md-list-item-text">
+      <h3>{{ councillor.name }}</h3>
+      <p>{{ councillor.ward }}</p>
+    </div>
+  </md-list-item>
+</md-list>
