--- a/www/templates/motions/trending.html
+++ b/www/templates/motions/trending.html
@@ -1,11 +1,8 @@
 <md-list>
   <md-list-item class="md-2-line" ng-repeat="motion in motions">
     <div class="md-list-item-text">
-      <h3>{{ motion["Agenda Item Title"] }}</h3>
-      <p>{{ motion["Agenda Item #"] }}</p>
+      <h3>{{ motion["Agenda Item #"] }}</h3>
+      <p>{{ motion["Agenda Item Title"] }}</p>
     </div>
   </md-list-item>
 </md-list>
-<button class="md-fab md-button md-default-theme" ng-transclude="" aria-label="Eat cake">
-  <md-icon md-svg-src="img/icons/add.svg" class="ng-scope ng-isolate-scope md-default-theme" aria-hidden="true"></md-icon>
-</button>
