--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -26,8 +26,7 @@ md-toolbar.md-default-theme {
   box-shadow: none;
   font-size: 1.3rem;
   font-weight: 400;
-  letter-spacing: 0.005em;
-  padding-top: 25px; }
+  letter-spacing: 0.005em; }
   md-toolbar.md-default-theme h1, md-toolbar.md-default-theme h2 {
     font-weight: normal;
     font-size: inherit;
@@ -43,11 +42,14 @@ md-content#main {
   top: 0; }
 
 md-tabs {
-  top: 88px;
+  top: 63px;
   left: 0;
   right: 0;
   bottom: 0;
   position: absolute; }
+
+md-sidenav .md-button {
+  text-align: left; }
 
 .md-tabs-content {
   bottom: 0;
@@ -61,6 +63,6 @@ md-tabs {
   right: 0; }
 
 a.md-button.md-default-theme.md-fab, .md-button.md-default-theme.md-fab {
-  position: absolute;
+  position: fixed;
   bottom: 2%;
   right: 2%; }
