--- a/www/templates/councillors.html
+++ b/www/templates/councillors.html
@@ -17,10 +17,10 @@
   <md-tab label="Roster" md-on-select="go('councillors.roster')">
     <div ui-view="roster"></div>
   </md-tab>
-  <!--<md-tab label="Upcoming" md-on-select="go('motions.upcoming')">
-    <div ui-view="upcoming"></div>
+  <md-tab label="Attendance" md-on-select="go('councillors.attendance')">
+    <div ui-view="attendance"></div>
   </md-tab>
-  <md-tab label="Faves" md-on-select="go('motions.favourites')">
+  <!--<md-tab label="Faves" md-on-select="go('motions.favourites')">
     <div ui-view="favourites"></div>
   </md-tab>-->
 </md-tabs>
