--- a/www/templates/councillors.html
+++ b/www/templates/councillors.html
@@ -7,9 +7,9 @@
       <span>Councillors</span>
     </h2>
     <span flex></span>
-    <!--<md-button class="md-icon-button" aria-label="More">
+    <md-button class="md-icon-button" aria-label="More">
       <md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>
-    </md-button>-->
+    </md-button>
   </div>
 </md-toolbar>
 
