--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -42,7 +42,7 @@ md-toolbar.md-default-theme {
   //padding-top: 25px;
   h1, h2 {
     font-weight: normal;
-    font-size: inherit;
+    //font-size: inherit;
     color: inherit;
     margin: 0;
     line-height: inherit;
