support city hall api

--- a/www/templates/councillors.html
+++ b/www/templates/councillors.html
@@ -14,7 +14,7 @@
 </md-toolbar>
 
 <md-tabs md-selected="selectedIndex" class="md-primary" md-no-pagination="true">
-  <md-tab label="Roster" md-on-select="go('councillors.roster')">
+  <md-tab label="Members" md-on-select="go('councillors.roster')">
     <div ui-view="roster"></div>
   </md-tab>
   <md-tab label="Attendance" md-on-select="go('councillors.attendance')">
