--- a/www/templates/councillors/roster.html
+++ b/www/templates/councillors/roster.html
@@ -1,8 +1,8 @@
 <md-list>
   <md-list-item class="md-2-line" ng-repeat="councillor in council">
-    <img ng-src="{{ apiUrl }}{{ councillor.avatarUrl }}" class="md-avatar">
+    <img ng-src="{{ apiUrl }}{{ councillor.image_url }}" class="md-avatar">
     <div class="md-list-item-text">
-      <h3>{{ councillor.lastName }}, {{ councillor.firstName }}</h3>
+      <h3>{{ councillor.last_name }}, {{ councillor.first_name }}</h3>
       <p>Ward {{ councillor.ward.number }} {{ councillor.ward.region }}</p>
     </div>
   </md-list-item>
