--- a/www/templates/motions/latest.html
+++ b/www/templates/motions/latest.html
@@ -1,8 +1,8 @@
 <md-list>
   <md-list-item class="md-2-line" ng-repeat="motion in motions">
     <div class="md-list-item-text">
-      <h3>{{ motion["Agenda Item #"] }}</h3>
-      <p>{{ motion["Agenda Item Title"] }}</p>
+      <h3>{{ motion.identifier }}</h3>
+      <p>{{ motion.title }}</p>
     </div>
   </md-list-item>
 </md-list>
