--- a/www/templates/motions/upcoming.html
+++ b/www/templates/motions/upcoming.html
@@ -1,8 +1,10 @@
-<md-list>
+<!--<md-list>
   <md-list-item class="md-2-line" ng-repeat="motion in motions">
     <div class="md-list-item-text">
       <h3>{{ motion.identifier }}</h3>
       <p>{{ motion.title }}</p>
     </div>
   </md-list-item>
-</md-list>
+</md-list>-->
+<br>
+<h4>No upcoming motions available at this time.</h4>
