--- a/www/templates/motions.html
+++ b/www/templates/motions.html
@@ -4,7 +4,7 @@
       <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
     </md-button>
     <h2>
-      <span>Motion List</span>
+      <span>Motions</span>
     </h2>
     <span flex></span>
     <md-button class="md-icon-button" aria-label="More">
