--- a/www/templates/councillors/roster.html
+++ b/www/templates/councillors/roster.html
@@ -3,7 +3,7 @@
     <img ng-src="{{ apiUrl }}{{ councillor.image_url }}" class="md-avatar" ui-sref="councillors.councillor({ id: councillor.id, councillor: councillor })">
     <div class="md-list-item-text">
       <h3>{{ councillor.last_name }}, {{ councillor.first_name }}</h3>
-      <p>Ward {{ councillor.ward.number }} {{ councillor.ward.region }}</p>
+      <p>{{ councillor.ward.region }}</p>
     </div>
   </md-list-item>
 </md-list>
