--- a/www/templates/motions/latest.html
+++ b/www/templates/motions/latest.html
@@ -1,8 +1,12 @@
 <md-list>
-  <md-list-item class="md-2-line" ng-repeat="motion in motions" md-swipe-right="interact()">
+  <md-list-item class="md-2-line" ng-repeat="motion in motions" swipe-motion>
+    <div class="md-list-item-actions">
+      <md-icon md-svg-icon="img/icons/ic_launch_black_24px.svg">
+    </div>
     <div class="md-list-item-text">
       <h3>{{ motion.identifier }}</h3>
       <p>{{ motion.title }}</p>
     </div>
+    <md-divider></md-divider>
   </md-list-item>
 </md-list>
