--- a/www/templates/wards.html
+++ b/www/templates/wards.html
@@ -1,14 +1,14 @@
 <md-toolbar>
   <div class="md-toolbar-tools">
     <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleMenu()">
-      <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
+      <md-icon class="white" md-svg-icon="img/icons/ic_menu_black_24px.svg"></md-icon>
     </md-button>
     <h2>
       <span>Wards</span>
     </h2>
     <span flex></span>
     <md-button class="md-icon-button" aria-label="More">
-      <md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>
+      <md-icon class="white" md-svg-icon="img/icons/ic_more_vert_black_24px.svg"></md-icon>
     </md-button>
   </div>
 </md-toolbar>
