--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -67,6 +67,7 @@ md-content#main {
 
 md-tabs {
   top: 63px;
+  //top: 88px;
   left: 0;
   right: 0;
   bottom: 0;
@@ -89,12 +90,14 @@ md-list-item {
   .md-list-item-text {
     position: relative;
     background-color: white;
+    -webkit-transform: translate3d(0px,0px,0px);
   }
   .md-list-item-actions {
     position: absolute;
     top: 30px;
     opacity: 0;
     transition: opacity 0.35s;
+    -webkit-transform: translate3d(0px,0px,0px);
   }
 }
 
@@ -121,4 +124,12 @@ a.md-button.md-default-theme.md-fab, .md-button.md-default-theme.md-fab {
   position: fixed;
   bottom: 2%;
   right: 2%;
+}
+
+.councillor.single {
+  .md-avatar {
+    height: 400px;
+    width: 300px;
+    margin: 0 auto;
+  }
 }
