--- a/www/templates/motions/latest.html
+++ b/www/templates/motions/latest.html
@@ -1,11 +1,11 @@
 <md-list>
-  <md-list-item class="md-2-line" ng-repeat="motion in motions" swipe-motion>
+  <md-list-item class="md-2-line motion" ng-repeat="motion in motions" swipe-motion>
     <div class="md-list-item-actions">
       <md-icon md-svg-icon="img/icons/ic_launch_black_24px.svg">
     </div>
     <div class="md-list-item-text">
-      <h3>{{ motion.identifier }}</h3>
-      <p>{{ motion.title }}</p>
+      <h3>{{ motion.motion.identifier }} <span class="result {{ motion.result }}">{{ motion.result }}ed</span></h3>
+      <p>{{ motion.motion.title }}</p>
     </div>
     <md-divider></md-divider>
   </md-list-item>
