--- a/www/templates/motions/latest.html
+++ b/www/templates/motions/latest.html
@@ -7,6 +7,6 @@
       <h3>{{ motion.motion.identifier }} <span class="result {{ motion.result }}">{{ motion.result }}ed</span></h3>
       <p>{{ motion.motion.title }}</p>
     </div>
-    <md-divider></md-divider>
+    <!--<md-divider></md-divider>-->
   </md-list-item>
 </md-list>
