--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -87,6 +87,7 @@ md-sidenav {
 md-list-item {
   cursor: pointer;
   position: relative;
+  border-bottom: 1px #f2f2f2 solid;
   .md-list-item-text {
     position: relative;
     background-color: white;
