Add organization name to motions.

--- a/www/templates/motions/latest.html
+++ b/www/templates/motions/latest.html
@@ -1,8 +1,9 @@
 <md-list>
   <md-list-item class="md-2-line" ng-repeat="motion in motions" md-swipe-right="interact()">
     <div class="md-list-item-text">
-      <h3>{{ motion.identifier }}</h3>
-      <p>{{ motion.title }}</p>
+      <h3>{{ motion.title }}</h3>
+      <h4>{{ motion.organization.name }}</h4>
+      <p>{{ motion.identifier }}</p>
     </div>
   </md-list-item>
 </md-list>
