Using the new grape api endpoint. (not sails)
* Fetch wards from grape API.

    Depends on this being merged:
    https://github.com/opencivicdata/scrapers-ca/pull/157

* Get councillor data from grape API.
* Only create wards from posts for councillors.
* First stab at ability to view single councillor.
* Point default API base url to public endpoint.
* Use division for ward name, as extras no longer on post objects.

--- a/www/templates/motions/latest.html
+++ b/www/templates/motions/latest.html
@@ -1,9 +1,9 @@
 <md-list>
   <md-list-item class="md-2-line" ng-repeat="motion in motions" md-swipe-right="interact()">
     <div class="md-list-item-text">
-      <h3>{{ motion.title }}</h3>
-      <h4>{{ motion.organization.name }}</h4>
-      <p>{{ motion.identifier }}</p>
+      <h3>{{ motion.description }}</h3>
+      <h4>{{ motion.event.name }}</h4>
+      <p>{{ motion.event.start_time | date : 'medium' : '-0500' }}</p>
     </div>
   </md-list-item>
 </md-list>
