--- a/www/templates/councillors/single.html
+++ b/www/templates/councillors/single.html
@@ -3,7 +3,7 @@
     <md-icon md-svg-src="img/favorite_outline.svg"></md-icon>
   </md-button>
   <md-content class="lower md-default md-hue-1">
-    <h2 class="md-title">{{ councillor.first_name }} {{ councillor.last_name }}</h2>
+    <h2 class="md-title">{{ councillor.name }}</h2>
     <h5 class="md-subhead">{{ councillor.email }}</h5>
     <pre>{{ params }}
     <md-list>
