--- a/www/templates/wards/list.html
+++ b/www/templates/wards/list.html
@@ -1,8 +1,8 @@
 <md-list>
   <md-list-item ng-repeat="ward in wards">
     <!--<img ng-src="{{ apiUrl }}{{ councillor.image_url }}" class="md-avatar" ui-sref="councillors.councillor({ id: councillor.id, councillor: councillor })">-->
-    <div class="md-list-item-text">
-      <h3>{{ ward.region }}</h3>
+    <div class="md-list-item-text" ng-if="ward.role == 'Councillor'">
+      <h3>{{ ward.division.name }}</h3>
       <!--<p>Ward {{ councillor.ward.number }} {{ councillor.ward.region }}</p>-->
     </div>
   </md-list-item>
