--- a/www/templates/motions/latest.html
+++ b/www/templates/motions/latest.html
@@ -1,9 +1,10 @@
-<md-list>
+<md-list ng-repeat="(start_time, motions) in motions | groupBy: 'event.start_time'">
+  <md-subheader class="md-no-sticky">{{ start_time | date : 'fullDate'}}</md-subheader>
   <md-list-item class="md-2-line" ng-repeat="motion in motions" md-swipe-right="interact()">
     <div class="md-list-item-text">
       <h3>{{ motion.description }}</h3>
       <h4>{{ motion.event.name }}</h4>
-      <p>{{ motion.event.start_time | date : 'medium' : '-0500' }}</p>
+      <p>{{ motion.event.start_time | date : 'shortTime' : '-0500' }}</p>
     </div>
   </md-list-item>
 </md-list>
