--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -49,6 +49,10 @@ md-toolbar.md-default-theme {
   }
 }
 
+md-list-item.md-3-line .md-list-item-text h3 {
+  line-height: 1em;
+}
+
 md-content#main {
   position: absolute;
   left: 0;
