--- a/www/templates/motions/upcoming.html
+++ b/www/templates/motions/upcoming.html
@@ -1,5 +1,5 @@
-<md-list ng-repeat="(start_time, motions) in motions | groupBy: 'event.start_time'">
-  <md-subheader class="md-no-sticky">{{ start_time | date : 'fullDate'}}</md-subheader>
+<md-list ng-repeat="(fullDate, motions) in motions | groupBy: 'event.start_time | date : fullDate'">
+  <md-subheader class="md-no-sticky">{{ fullDate }}</md-subheader>
   <md-list-item class="md-3-line" ng-repeat="motion in motions" md-swipe-right="interact()">
     <div class="md-list-item-text">
       <h3>{{ motion.description }}</h3>
