update: pull latest changes from dougestey

--- a/www/templates/councillors.html
+++ b/www/templates/councillors.html
@@ -13,7 +13,7 @@
   </div>
 </md-toolbar>
 
-<md-tabs md-selected="selectedIndex" class="md-primary" md-no-pagination="true">
+<md-tabs md-selected="selectedIndex" class="md-primary" md-no-pagination="true" md-stretch-tabs="always">
   <md-tab label="Members" md-on-select="go('councillors.roster')">
     <div ui-view="roster"></div>
   </md-tab>
