--- a/www/templates/motions.html
+++ b/www/templates/motions.html
@@ -13,7 +13,7 @@
   </div>
 </md-toolbar>
 
-<md-tabs md-selected="selectedIndex" class="md-primary" md-no-pagination="true" md-swipe-content="false">
+<md-tabs md-selected="selectedIndex" class="md-primary" md-no-pagination="true" md-swipe-content="false" md-stretch-tabs="always">
   <md-tab label="Latest" md-on-select="go('motions.latest')">
     <div ui-view="latest"></div>
   </md-tab>
