--- a/www/templates/wards.html
+++ b/www/templates/wards.html
@@ -13,7 +13,7 @@
   </div>
 </md-toolbar>
 
-<md-tabs md-selected="selectedIndex" class="md-primary" md-no-pagination="true">
+<md-tabs md-selected="selectedIndex" class="md-primary" md-no-pagination="true" md-stretch-tabs="always">
   <md-tab label="List" md-on-select="go('wards.list')">
     <div ui-view="list"></div>
   </md-tab>
